--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
-  "name": "ws-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "ws0909-ui",
+  "version": "0.1.2",
+  "description": "我的演示组件库",
+  "main": "dist/index.umd.js",
+  "keywords": [
+    "ws-ui",
+    "vue"
+  ],
+  "author": "ws",
+  "files": [
+    "dist",
+    "components"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "npm run build:js && npm run build:css",
+    "lint": "vue-cli-service lint",
+    "build:js": "webpack --config ./webpack.component.js",
+    "build:css": "npx gulp sass",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gulp": "^4.0.2",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -19,7 +38,13 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuepress": "^1.9.7",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "ws0909-ui": "^0.1.2"
   },
   "eslintConfig": {
     "root": true,
